--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-spinning-wheel></app-spinning-wheel>
+<app-spinning-wheel>
+  <app-one-client first></app-one-client>
+  <app-another-client second></app-another-client>
+</app-spinning-wheel>
