--- a/src/app/another-client/another-client.component.html
+++ b/src/app/another-client/another-client.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="spinService.prizeWon$ | async as prize" class="d-flex flex-column align-items-center gap-2">
-  <p>Hi, I am Bolek component</p>
+  <p>Hi, I am Bolek</p>
   <button pButton label="Spin the wheel" (click)="spinService.spinAndWin()"></button>
   <p>I won: {{prize}}</p>
 </div>
