--- a/src/spinning-wheel/components/spinning-wheel/spinning-wheel.component.scss
+++ b/src/spinning-wheel/components/spinning-wheel/spinning-wheel.component.scss
@@ -19,17 +19,12 @@
   height: 100vh;
 }
 
-.parent.card {
+.container {
   display: flex;
+  gap: 20px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  padding: 10px;
-  width: 70%;
-  height: 90%;
-  border: solid 12px white;
-  background-color: #2d679a;
 }
 
 .child.card {
