use class, use existing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-spinning-wheel>
-  <app-one-client first></app-one-client>
-  <app-another-client second></app-another-client>
+  <app-one-component first></app-one-component>
+  <app-another-component second></app-another-component>
 </app-spinning-wheel>
