--- a/src/spinning-wheel/components/spinning-wheel/spinning-wheel.component.html
+++ b/src/spinning-wheel/components/spinning-wheel/spinning-wheel.component.html
@@ -12,6 +12,7 @@
       <div class="child card">
         <ng-content select="[second]"></ng-content>
       </div>
+      <ng-content select="[feedback]"></ng-content>
     </div>
   </div>
 </div>
