--- a/src/app/one-component/one.component.html
+++ b/src/app/one-component/one.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="spinService?.prizeWon$ | async as prize" class="d-flex flex-column align-items-center gap-2" appHighlight>
+<div *ngIf="spinService?.prizeWon$ | async as prize" class="d-flex flex-column align-items-center gap-2">
   <p>Hi, I am Lolek</p>
   <button pButton label="Spin the wheel" (click)="spinService.spinAndWin()"></button>
   <p>I won: {{prize}}</p>
