--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-spinning-wheel>
+  <app-registration registration></app-registration>
   <app-one-component first></app-one-component>
   <app-another-component second></app-another-component>
 </app-spinning-wheel>
