--- a/src/spinning-wheel/components/spinning-wheel/spinning-wheel.component.html
+++ b/src/spinning-wheel/components/spinning-wheel/spinning-wheel.component.html
@@ -7,6 +7,9 @@
   <div class="right">
     <div class="container">
       <div class="child card">
+        <ng-content select="[registration]"></ng-content>
+      </div>
+      <div class="child card">
         <ng-content select="[first]"></ng-content>
       </div>
       <div class="child card">
