--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-spinning-wheel>
   <app-one-client first></app-one-client>
   <app-another-client second></app-another-client>
-<!--  <router-outlet feedback></router-outlet>-->
+  <router-outlet feedback></router-outlet>
 </app-spinning-wheel>
